@@ -20,7 +20,6 @@
     
     <properties>
         <java.version>17</java.version>
-        <!-- Versi JaCoCo -->
         <jacoco.version>0.8.11</jacoco.version>
     </properties>
     
@@ -104,6 +103,14 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <!-- 7. MOCKITO INLINE (Obat Test) -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
     <build>
@@ -113,8 +120,8 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
-            <!-- INI DIA YANG DITUNGGU GITHUB: Plugin JaCoCo -->
+            
+            <!-- Plugin JaCoCo (Pembuat Laporan) -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -133,6 +140,17 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- PLUGIN PENTING: SUREFIRE (Penyelamat Java 25 & JaCoCo) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- @{argLine} memanggil JaCoCo -->
+                    <!-- Sisanya memperbaiki error Mockito di Java 25 -->
+                    <argLine>@{argLine} -Dnet.bytebuddy.experimental=true -XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
